# Bulk-RNA-seq-differential-expression

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: 01_bulk_rnaseq_exploration.ipynb
src/: main.py
src/data/: simulator.py
src/models/: deseq2.py  enrichment.py
src/utils/: config.py  logger.py
src/visualization/: plots.py
tests/: test_deseq2.py  test_plots_enrichment.py  test_simulator.py
